Show a canvas and add css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> </head>
+    <head>
+        <title>GMTK_2022 Roll of the Dice</title>
+        <link data-trunk rel="scss" href="index.scss"/>
+    </head>
     <body></body>
 </html>
