--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>GMTK_2022 Roll of the Dice</title>
+        <base data-trunk-public-url/>
         <link data-trunk rel="copy-dir" href="assets"/>
         <link data-trunk rel="scss" href="index.scss"/>
     </head>
